[gd_scene load_steps=11 format=2]

[ext_resource path="res://weapons/w_e_fandead_laser.gd" type="Script" id=1]
[ext_resource path="res://resc/particles/glowing_circle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.8012, 159.08 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.2
orbit_velocity = 1.0
orbit_velocity_random = 0.5
scale_curve = SubResource( 7 )
color = Color( 1.5, 2, 1.5, 1 )
color_ramp = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )
color = Color( 1.5, 2, 1.5, 1 )
color_ramp = SubResource( 5 )

[sub_resource type="Environment" id=8]
background_mode = 4
ambient_light_color = Color( 0.631373, 0.870588, 0.843137, 1 )
ambient_light_energy = 1.22
glow_enabled = true
glow_intensity = 0.5
glow_strength = 0.75
glow_bicubic_upscale = true
adjustment_enabled = true

[node name="RayCast2D" type="RayCast2D"]
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="WarningLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 2, 0, 0, 0.231373 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 1, 2, 1.4, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 668.319, 0.207764 )
shape = SubResource( 1 )

[node name="TargetParticle" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
lifetime = 0.3
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="WarningParticle" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 4
lifetime = 0.75
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="BeamParticle" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 12
lifetime = 0.5
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )
